<resources>
    <string name="app_name">Connectify</string>
    <string name="enter_name">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="label_sign_in">Sign In</string>
    <string name="btn_login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>