<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.connectifyhk.connectify_fyp.SignUpActivity"
    android:background="#f8f9fa"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:srcCompat="@drawable/datingpic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/label_sign_in"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/colorDarkgrey"
        android:background="@color/colorTextBackground"
        android:fontFamily="sans-serif-light"
        android:hint="@string/enter_email"
        android:id="@+id/etEmail"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:padding="12dp"
        android:inputType="textPassword"
        android:textColor="@color/colorDarkgrey"
        android:background="@color/colorTextBackground"
        android:fontFamily="sans-serif-light"
        android:hint="@string/enter_password"
        android:id="@+id/etPassword"/>





        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_marginEnd="2dp"
            android:text="@string/btn_login"
            android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/colorDarkgrey"
        android:text="@string/btn_sign_up"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />


</LinearLayout>




